# AI_TTS

./: Readme.md
Day1/: Bai1.py  Bai2.py  Bai3.py  Bai4.py  Bai5.py  bai2.txt
Day2/AI_Attendance/: config.py  main.py  test.py
Day2/AI_Attendance/__pycache__/: config.cpython-311.pyc.2156685426576  config.cpython-311.pyc.2290257698448  config.cpython-311.pyc.2415914957184  main.cpython-311.pyc.2290257698448  test.cpython-311.pyc.2290257698448
Day2/AI_Attendance/controllers/: camera_controller.py  dashboard_controller.py  employee_controller.py  report_controller.py
Day2/AI_Attendance/core/: camera.py  face_detector.py  face_recognizer.py  utils.py
Day2/AI_Attendance/data/: employees.json
Day2/AI_Attendance/db/: __init__.py  database.py
Day2/AI_Attendance/gui/: camera_view.py  dashboard_view.py  employee_view.py  main_window.py  report_view.py  sidebar.py  theme.py
Day2/AI_Attendance/services/: attendance_service.py  dataset_service.py  (+4 more)
Day2/diagrams/: day2-architecture.drawio  day2-camera-attendance-flow.drawio  day2-delete-retrain-flow.drawio  day2-report-flow.drawio
Day3/: .gitignore  main.py  pyproject.toml
Day3/diagrams/: day3-architecture.drawio  day3-db-schema.drawio  day3-etl-runtime-flow.drawio  day3-idempotent-flow.drawio
Day3/src/: config.py  database.py  fetcher.py  loader.py  transformer.py
Day4/: pyproject.toml
Day4/diagrams/: day4-architecture.drawio  day4-posts-crud-flow.drawio  day4-test-flow.drawio
Day4/src/: main.py
Day4/src/api/: posts.py
Day4/src/schemas/: post.py
Day4/src/services/: post_service.py
Day4/tests/: test_posts.py
Day5/: .gitignore  alembic.ini  pyproject.toml
Day5/alembic/: env.py
Day5/alembic/versions/: 0001_create_posts_table.py  6ed5efc9bd6f_check_schema_up_to_date.py
Day5/diagrams/: day5-architecture.drawio  day5-migration-flow.drawio  day5-posts-crud-flow.drawio
Day5/src/api/: posts.py
Day5/src/core/: config.py
Day5/src/db/: __init__.py  database.py  session.py
Day5/src/db/models/: post.py
Day5/src/models/: __init__.py
Day5/src/schemas/: post.py
Day5/src/services/: post_service.py
Day5/tests/: test_posts.py
Day6/: .gitignore  pyproject.toml
Day6/app/: main.py
Day6/app/api/v1/: auth.py  posts.py
Day6/app/core/: security.py
Day6/app/db/: session.py
Day6/app/dependencies/: auth.py
Day6/app/models/: user.py
Day6/app/schemas/: auth.py  user.py
Day6/app/services/: auth_service.py  user_service.py
(+57 files in other folders)
