[project]
name = "day3"
version = "0.1.0"
description = ""
authors = [
    {name = "khonghao0109",email = "khonghao0109@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)"
]

[tool.poetry]
packages = [{include = "day3", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
